Fixing contrast issues

--- a/renderer/styles/core.css
+++ b/renderer/styles/core.css
@@ -5,13 +5,14 @@ input#location {
   padding-left: 50px;
   padding-right: 50px;
   border: none;
-  background-color: rgb(52, 152, 219);
+  background-color: black;
+  color: white;
   opacity: 0.25;
 }
 
 input#location:focus {
   outline: 0;
-  background-color: rgb(52, 152, 219);
+  background-color: lighten(black, 20%);
   color: white;
   opacity: 1.0;
 }
